# Blog

./: .gitignore  Caddyfile  Dockerfile  Pipfile  archives.html  categories.html  db.sqlite3  how-i-fixed-htmx-redeclaration-of-let-with-hx-boosttrue.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  req.txt  search.html  tags.html  tasks.py
.github/: dependabot.yml
author/: baseplate-admin.html
category/: django.html
commands/management/commands/: collectstatic_rewired.py  remove_unnecessary_files.py
content/Django/: How i fixed htmx redeclaration of let element with hx-boost.md  keyboard-review.md
content/articles/Daphne/: How I added daphne to wappalyzer detection.md
content/articles/Django/: How i fixed htmx redeclaration of let element with hx-boost.md  Why I chose django-ninja instead of django-rest-framework to build coreproject.md
content/articles/Django-Ninja/: How to make a permission_required decorator for django-ninja.md  Why I chose django-ninja instead of django-rest-framework to build coreproject.md
core/: asgi.py  urls.py
core/settings/: base.py  dev.py  production.py
core/templates/: base.html
custom/blocks/: blocks.py
custom/site_settings/: models.py
feeds/: all.atom.xml  django.atom.xml
output/: archives.html  categories.html  index.html  my-first-review.html  search.html  tags.html
output/author/: baseplate-admin.html
output/category/: django.html  review.html  software.html
pages/authentication/: forms.py  models.py  views.py
pages/blog/: models.py  orderables.py  snippets.py
pages/home/: models.py
static/: staticfiles.json
theme/css/: main.css  pygment.css
themes/Papyrus/: package-lock.json  package.json
(+225 files in other folders)
