[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.9.1"}
pelican-neighbors = "^1.2.0"
pelican-readtime = "^0.2.0"
beautifulsoup4 = "^4.12.3"
pelican-sitemap = "^1.1.0"
pelican-seo = "^1.2.2"
pelican-search = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
poethepoet = "^0.28.0"
ghp-import = "^2.1.0"
djhtml = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = 'pelican --autoreload --listen --ignore-cache -s pelicanconf.py'
content = 'pelican content --ignore-cache -s publishconf.py --verbose'