[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.11.0"}
pelican-neighbors = "^1.2.0"
pelican-readtime = "^0.2.0"
beautifulsoup4 = "^4.14.3"
pelican-sitemap = "^1.2.2"
pelican-seo = "^1.4.0"
pelican-search = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
poethepoet = "^0.44.0"
ghp-import = "^2.1.0"
djhtml = "^3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = 'pelican --autoreload --listen --ignore-cache -s pelicanconf.py'
content = 'pelican content --ignore-cache -s publishconf.py --verbose'